add alert manager
