# src/routes/hive.routes.ts
@@ -12,6 +12,7 @@ import {
   removeUserAccessToHive,
 } from '../controllers/hive.controller.js';
 import {postData, getOneData, getAllData, deleteData, deleteAllData} from '../controllers/hiveData.controller.js';
+import {postAlert, getAllAlert, deleteAlert, deleteAllAlert} from '../controllers/alert.controller.js';
 
 const routes = Router();
 
@@ -33,5 +34,11 @@ routes.get('/data/:id', getOneData);
 routes.get('/data/all/:hiveId', getAllData);
 routes.delete('/data/:id', deleteData);
 routes.delete('/data/all/:hiveId', deleteAllData);
+
+// ALERTS:
+routes.post('/alert/', postAlert);
+routes.get('/alert/all/:hiveId', getAllAlert);
+routes.delete('/alert/:id', deleteAlert);
+routes.delete('/alert/all/:hiveId', deleteAllAlert);
 
 export default routes;
